# svbench-ai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: HG002_trio_loci.bed  benchmark_chr21.bed  discordant_loci.bed  pop_dbvar.bed.gz.tbi  pop_gnomad.bed.gz.tbi  pop_hgsvc.bed.gz.tbi
outputs/: sniffles_chr21.vcf  sniffles_chr21.vcf.gz.tbi  sniffles_hg005_chr21.vcf  sniffles_ont_chr21.vcf  sniffles_ont_chr21.vcf.gz.tbi  svim_chr21.vcf.gz.tbi
outputs/bench_sniffles/: candidate.refine.bed  dashboard.html  fn.vcf.gz.tbi  fp.vcf.gz.tbi  headline.json  log.txt  params.json  report.md  reviews.json  summary.json  tp-base.vcf.gz.tbi  tp-comp.vcf.gz.tbi
outputs/bench_sniffles_ont/: headline.json  log.txt  params.json  report.md  reviews.json  tp-base.vcf.gz.tbi
outputs/bench_sniffles_ont_chr21/: candidate.refine.bed  dashboard.html  fn.vcf.gz.tbi  fp.vcf.gz.tbi  headline.json  log.txt  params.json  report.md  reviews.json  summary.json  tp-comp.vcf.gz.tbi
outputs/bench_svim/: candidate.refine.bed  fn.vcf.gz.tbi  fp.vcf.gz.tbi  headline.json  log.txt  params.json  report.md  reviews.json  summary.json  tp-base.vcf.gz.tbi  tp-comp.vcf.gz.tbi
outputs/qc_sniffles_hg002_qc/: dashboard.html  headline.json  report.md  reviews.json
outputs/qc_sniffles_hg005/: dashboard.html  headline.json  qc_loci.bam  report.md  reviews.json
svbench/: __init__.py  annotate.py  app.py  benchmark.py  cli.py  config.py  data.py  doctor.py  popfreq.py  report.py  review.py  schema.py  server.py  shell.py  visualize.py
